feat: story 0.11 task 5,6
